{
    "name": "Input",
    "maps": [
        {
            "name": "GameScene",
            "id": "fdf5b6e2-b416-4c75-b13b-471f6e2c4714",
            "actions": [
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "aed0aae0-afa2-4a5c-bab3-c9f429d2a551",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "126e1583-d4dd-4050-aaad-1af6909ff48f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "de845106-0d5e-4f0a-ba42-918e6be45126",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "631e65a4-bee6-42a1-a3a2-5421f2fb72ed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "c6a40c47-528c-40b5-889d-917d0d0259b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "21f68ca8-702d-4d4a-b835-eef655295907",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SabAttack",
                    "type": "Button",
                    "id": "d5e5d6d5-3aa6-490c-8360-f484e4419dfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponSwitch",
                    "type": "Button",
                    "id": "8ac872da-c0cb-4305-bcf0-fa3b1f950180",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSelect",
                    "type": "Value",
                    "id": "f4850708-b173-4dfc-9e50-a403646f960b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ReLoad",
                    "type": "Button",
                    "id": "90078995-aec3-4850-b54b-2fa9d5fe96ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "squat",
                    "type": "Button",
                    "id": "a887a243-5394-4386-9c84-75a4dfc41b8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3253e5ef-29c6-4d99-b93e-4d7e090548b0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0ee61f6f-eaa1-4ce7-85ab-498a9216f90b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "916f0557-0039-4573-b710-329f46f70c03",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "97f3f4df-3a9c-4bcc-a597-b7bdda3fd1ce",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c1638a68-1cc2-401d-8a59-ccf98227a430",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "709d3d71-9516-4b46-b4ab-b104d0e079ed",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48627830-b9f8-40df-b5f7-41f7857c94ca",
                    "path": "<Mouse>/radius",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1036a207-7721-4276-a65c-34a3bce2c3c8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9120d074-1994-43cd-a166-6ccb9f00d3b3",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5131cab-7917-4ca3-8014-6d11c768b149",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "SabAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2b554b9-6527-453e-8946-15df2b0cfa5b",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "SabAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef6c545d-cf55-46ae-9460-39d43176591a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60b32180-6cf1-4b5d-b80c-741909520462",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "WeaponSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfda5029-e16a-488c-b06f-20afda49a5c6",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "WeaponSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "d5b3e45a-5821-41e4-b4f6-124e91f116bc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ItemSelect",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1eed260b-adda-497f-a7e1-ba2b48d93423",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ItemSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "472f2b87-9d86-4297-a90b-c69f5eff5968",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ItemSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c8bfd2aa-6a44-4cff-bcd8-071febc70dd6",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ItemSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "819e86fa-7bcd-4980-8d53-e8e0cc7d5a91",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ItemSelect",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "21e96703-1531-4f37-a135-b3fae69a0586",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ItemSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "712a250f-a234-4549-a982-ae34f0893d5f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efc115aa-b9b3-4a0f-abac-aa2f59ed7fb2",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbd988d7-5e11-4d0f-aeed-4f131a23c7eb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df374cd0-88b6-4a69-857a-eaee78ee6bfe",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "359268bf-a8e4-4aea-8bbe-322a8a552c0a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45498661-eb19-4806-97dc-20b18438f2ff",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "814d280f-c6cc-4dfe-8eaf-fb50ffd98a83",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ReLoad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dde03542-e75a-43c9-b300-4b45c80ab0c6",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ReLoad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8153f592-b8df-44d2-b118-bfbd69611358",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "squat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27309809-0840-4305-b994-1c5429633cab",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "squat",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Game",
            "bindingGroup": "Game",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}